--- a/src/app/grupos/pages/cad-grupo/cad-grupo.component.html
+++ b/src/app/grupos/pages/cad-grupo/cad-grupo.component.html
@@ -1,1 +1,34 @@
-<p>cad-grupo works!</p>
+<nz-page-header nzBackIcon [nzTitle]="novoRegistro ? 'Novo registro' : 'Editar registro'">
+    <nz-page-header-extra>
+        <button nz-button (click)="cancelar()"><i nz-icon class="far fa-undo" nzTheme="outline"></i>Cancelar</button>
+        <button nz-button nzType="primary" (click)="salvar()"><i nz-icon class="far fa-check"></i>Salvar</button>
+    </nz-page-header-extra>
+</nz-page-header>
+
+
+<div class="padding_form">
+
+
+
+    <form nz-form [formGroup]="form" *ngIf="grupo">
+        <div nz-row>
+            <div nz-col nzSm="24">
+                <nz-form-label nzFor="nome" [nzNoColon]="true">Descricao</nz-form-label>
+                <nz-form-item>
+                    <nz-form-control [nzSpan]="24" nzErrorTip="Campo requerido">
+                        <input nz-input placeholder="Digite aqui..." formControlName="descricao" id="descricao" />
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
+            <div nz-col nzSm="24">
+                <nz-form-label nzFor="nome" [nzNoColon]="true">Cod. Externo</nz-form-label>
+                <nz-form-item>
+                    <nz-form-control [nzSpan]="24" nzErrorTip="Campo requerido">
+                        <input nz-input placeholder="Digite aqui..." formControlName="codigoExterno"
+                            id="codigoExterno" />
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
+        </div>
+    </form>
+</div>
