cadastro de grupos

--- a/src/app/grupos/pages/cad-grupo/cad-grupo.component.html
+++ b/src/app/grupos/pages/cad-grupo/cad-grupo.component.html
@@ -7,10 +7,7 @@
 
 
 <div class="padding_form">
-
-
-
-    <form nz-form [formGroup]="form" *ngIf="grupo">
+    <form nz-form [formGroup]="form">
         <div nz-row>
             <div nz-col nzSm="24">
                 <nz-form-label nzFor="nome" [nzNoColon]="true">Descricao</nz-form-label>
