--- a/src/app/produtos/pages/produtos/produtos.component.html
+++ b/src/app/produtos/pages/produtos/produtos.component.html
@@ -1,1 +1,58 @@
-<p>CONSULTA produtos works!</p>
+<nz-page-header nzTitle="Consulta de produtos">
+    <nz-page-header-extra>
+        <button nz-button nzType="primary" (click)="novo()"><i nz-icon nzType="plus"></i>Novo</button>
+    </nz-page-header-extra>
+</nz-page-header>
+
+<nz-content>
+    <h3>Filtros</h3>
+    <div class="search-container">
+        <nz-row>
+            <nz-col nzXs="24" nzSm="24" nzMd="12" nzLg="8" nzXl="6">
+                <div class="filter-col">
+                    <nz-input-group [nzSuffix]="suffixIconSearch">
+                        <input type="text" nz-input placeholder="Localizar por descricao" (keyup)="localizar($event)" />
+                    </nz-input-group>
+                    <ng-template #suffixIconSearch>
+                        <i nz-icon nzType="search"></i>
+                    </ng-template>
+                </div>
+            </nz-col>
+        </nz-row>
+    </div>
+    <nz-spin nzTip="Consultando..." [nzSpinning]="false">
+        <nz-table #dados [nzData]="produtos" [nzLoading]="loading" nzSize="small" [nzFrontPagination]="false"
+            [nzBordered]="true" [nzScroll]="{ y: '450px' }">
+            <thead>
+                <tr>
+                    <th nzWidth="150px">Ações</th>
+                    <th nzWidth="250px">Descrição</th>
+                    <th>Nome</th>
+                    <th>Código externo</th>
+                    <th>Imagem</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr *ngFor="let item of dados.data">
+                    <td>
+                        <button nz-button nzType="primary" nzShape="circle" (click)="editar(item)">
+                            <i nz-icon nzType="edit"></i>
+                        </button>
+                        <button nz-button nzType="primary" nzShape="circle" (click)="excluir(item)">
+                            <i nz-icon nzType="delete"></i>
+                        </button>
+                    </td>
+                    <td>{{item.nome}}</td>
+                    <td>{{item.descricao}}</td>
+                    <td>{{item.codigoExterno}}</td>
+                    <td>
+                        <img nz-image width="100px" height="100px"
+                            [nzSrc]="item.urlImagem"
+                            [nzFallback]="fallbackImg"
+                            alt="" />
+                    </td>
+                </tr>
+            </tbody>
+        </nz-table>
+    </nz-spin>
+</nz-content>
