--- a/src/styles.scss
+++ b/src/styles.scss
@@ -15,3 +15,8 @@ nz-content {
     margin-right: 8px;
     margin-bottom: 8px;
 }
+
+.padding_form{
+    padding-left: 16px;
+    padding-right: 16px;
+}
