--- a/src/app/produtos/pages/produtos/produtos.component.html
+++ b/src/app/produtos/pages/produtos/produtos.component.html
@@ -5,13 +5,14 @@
 </nz-page-header>
 
 <nz-content>
-    <h3>Filtros</h3>
+    <h3>Filtros</h3>    
     <div class="search-container">
         <nz-row>
             <nz-col nzXs="24" nzSm="24" nzMd="12" nzLg="8" nzXl="6">
                 <div class="filter-col">
                     <nz-input-group [nzSuffix]="suffixIconSearch">
-                        <input type="text" nz-input placeholder="Localizar por descricao" (keyup)="localizar($event)" />
+                        <input type="text" nz-input placeholder="Localizar por descricao" 
+                        (keyup)="localizar($event)" />
                     </nz-input-group>
                     <ng-template #suffixIconSearch>
                         <i nz-icon nzType="search"></i>
@@ -53,7 +54,7 @@
                             [nzFallback]="fallbackImg"
                             alt="" />
                     </td>
-                </tr>
+                </tr>                
             </tbody>
         </nz-table>
     </nz-spin>
