--- a/src/app/clientes/pages/cad-cliente/cad-cliente.component.html
+++ b/src/app/clientes/pages/cad-cliente/cad-cliente.component.html
@@ -8,24 +8,23 @@
 
 <div class="padding_form">
 
-    <form nz-form [formGroup]="form" *ngIf="produto">
+    <div nz-row>
+        <div nz-col nzSm="24">
+            <nz-form-item>
+                <nz-radio-group [(ngModel)]="pessoaJuridica" (ngModelChange)="pessoaJuridicaChange()">
+                    <label nz-radio [nzValue]="true">Pessoa Jurídica</label>
+                    <label nz-radio [nzValue]="false">Pessoa Física</label>
+                </nz-radio-group>
+            </nz-form-item>
+        </div>
+    </div>
+    <form nz-form [formGroup]="form" *ngIf="cliente">
         <div nz-row>
             <div nz-col nzSm="24">
-                <nz-form-label nzFor="nome" [nzNoColon]="true">Grupo</nz-form-label>
                 <nz-form-item>
-                    <nz-select nzShowSearch nzAllowClear [(ngModel)]="grupoSelecionado"
-                        [nzPlaceHolder]="carregandoGrupos ? 'Carregando...' : 'Selecione...'"
-                        formControlName="grupoProdutoId">
-                        <ng-container *ngFor="let grupo of grupos">
-                            <nz-option *ngIf="!carregandoGrupos" [nzLabel]="grupo.descricao" [nzValue]="grupo.id">
-                            </nz-option>
-                        </ng-container>
-                        <nz-option *ngIf="carregandoGrupos" nzDisabled nzCustomContent>
-                            <i nz-icon nzType="loading" class="loading-icon"></i>
-                            Carregando...
-                        </nz-option>
-                    </nz-select>
-
+                    <nz-form-control nzErrorTip="Ativo">
+                        <input type="checkbox" nz-input formControlName="ativo" /> Ativo
+                    </nz-form-control>
                 </nz-form-item>
             </div>
             <div nz-col nzSm="24">
@@ -36,30 +35,141 @@
                     </nz-form-control>
                 </nz-form-item>
             </div>
+            <ng-container *ngIf="pessoaJuridica">
+                <div nz-col nzSm="24">
+                    <nz-form-label nzFor="nome" [nzNoColon]="true">Razão Social</nz-form-label>
+                    <nz-form-item>
+                        <nz-form-control [nzSpan]="24" nzErrorTip="Campo requerido">
+                            <input nz-input placeholder="Digite aqui..." formControlName="razaoSocial"
+                                id="razaoSocial" />
+                        </nz-form-control>
+                    </nz-form-item>
+                </div>
+                <div nz-col nzSm="24">
+                    <nz-form-label nzFor="nome" [nzNoColon]="true">CNPJ</nz-form-label>
+                    <nz-form-item>
+                        <nz-form-control [nzSpan]="24" nzErrorTip="Campo requerido">
+                            <input nz-input placeholder="Digite aqui..." formControlName="cnpj" id="cnpj"
+                                mask="00.000.000/0000-00" />
+                        </nz-form-control>
+                    </nz-form-item>
+                </div>
+            </ng-container>
+            <ng-container *ngIf="pessoaJuridica == false">
+                <div nz-col nzSm="24">
+                    <nz-form-label nzFor="nome" [nzNoColon]="true">CPF</nz-form-label>
+                    <nz-form-item>
+                        <nz-form-control [nzSpan]="24" nzErrorTip="Campo requerido">
+                            <input nz-input placeholder="Digite aqui..." formControlName="cpf" id="cpf"
+                                mask="000.000.000-00" />
+                        </nz-form-control>
+                    </nz-form-item>
+                </div>
+            </ng-container>
             <div nz-col nzSm="24">
-                <nz-form-label nzFor="nome" [nzNoColon]="true">Descricao</nz-form-label>
+                <nz-form-label nzFor="nome" [nzNoColon]="true">Rua</nz-form-label>
                 <nz-form-item>
                     <nz-form-control [nzSpan]="24" nzErrorTip="Campo requerido">
-                        <input nz-input placeholder="Digite aqui..." formControlName="descricao" id="descricao" />
+                        <input nz-input placeholder="Digite aqui..." formControlName="rua" id="rua" />
                     </nz-form-control>
                 </nz-form-item>
             </div>
             <div nz-col nzSm="24">
-                <nz-form-label nzFor="nome" [nzNoColon]="true">Preço</nz-form-label>
+                <nz-form-label nzFor="nome" [nzNoColon]="true">Número</nz-form-label>
                 <nz-form-item>
                     <nz-form-control [nzSpan]="24" nzErrorTip="Campo requerido">
-                        <input nz-input placeholder="Digite aqui..." formControlName="preco" id="preco" />
+                        <input nz-input placeholder="Digite aqui..." formControlName="numero" id="numero" />
                     </nz-form-control>
                 </nz-form-item>
             </div>
             <div nz-col nzSm="24">
-                <nz-form-label nzFor="nome" [nzNoColon]="true">Url Imagem</nz-form-label>
+                <nz-form-label nzFor="nome" [nzNoColon]="true">Complemento</nz-form-label>
                 <nz-form-item>
                     <nz-form-control [nzSpan]="24" nzErrorTip="Campo requerido">
-                        <input nz-input placeholder="Digite aqui..." formControlName="urlImagem" id="urlImagem" />
+                        <input nz-input placeholder="Digite aqui..." formControlName="complemento" id="complemento" />
                     </nz-form-control>
                 </nz-form-item>
-            </div>            
+            </div>
+            <div nz-col nzSm="24">
+                <nz-form-label nzFor="nome" [nzNoColon]="true">Bairro</nz-form-label>
+                <nz-form-item>
+                    <nz-form-control [nzSpan]="24" nzErrorTip="Campo requerido">
+                        <input nz-input placeholder="Digite aqui..." formControlName="bairro" id="bairro" />
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
+            <div nz-col nzSm="24">
+                <nz-form-label nzFor="nome" [nzNoColon]="true">Cep</nz-form-label>
+                <nz-form-item>
+                    <nz-form-control [nzSpan]="24" nzErrorTip="Campo requerido">
+                        <input nz-input placeholder="Digite aqui..." formControlName="cep" mask="00.000-000" id="cep" />
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
+            <div nz-col nzSm="24">
+                <nz-form-label nzFor="estado" [nzNoColon]="true">Estado</nz-form-label>
+                <nz-form-item>
+                    <nz-form-control [nzSpan]="24">
+                        <nz-select nzShowSearch nzAllowClear [(ngModel)]="estadoSelecionado"
+                            [nzPlaceHolder]="carregandoEstados ? 'Carregando...' : 'Selecione...'"
+                            formControlName="estadoId" (ngModelChange)="carregarCidades($event)">
+                            <ng-container *ngFor="let estado of estados">
+                                <nz-option *ngIf="!carregandoEstados" [nzLabel]="estado.nome" [nzValue]="estado.id">
+                                </nz-option>
+                            </ng-container>
+                            <nz-option *ngIf="carregandoEstados" nzDisabled nzCustomContent>
+                                <i nz-icon nzType="loading" class="loading-icon"></i>
+                                Carregando...
+                            </nz-option>
+                        </nz-select>
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
+            <div nz-col nzSm="24">
+                <nz-form-label nzFor="cidade" [nzNoColon]="true">Cidade</nz-form-label>
+                <nz-form-item>
+                    <nz-form-control [nzSpan]="24">
+                        <nz-select nzShowSearch nzAllowClear
+                            [nzPlaceHolder]="carregandoCidades ? 'Carregando...' : 'Selecione...'"
+                            formControlName="cidadeId" [(ngModel)]="cidadeSelecionada">
+                            <ng-container *ngFor="let cidade of cidades">
+                                <nz-option *ngIf="!carregandoCidades" [nzLabel]="cidade.nome" [nzValue]="cidade.id">
+                                </nz-option>
+                            </ng-container>
+                            <nz-option *ngIf="carregandoCidades" nzDisabled nzCustomContent>
+                                <i nz-icon nzType="loading" class="loading-icon"></i>
+                                Carregando...
+                            </nz-option>
+                        </nz-select>
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
+            <div nz-col nzSm="24">
+                <nz-form-label nzFor="nome" [nzNoColon]="true">Fone</nz-form-label>
+                <nz-form-item>
+                    <nz-form-control [nzSpan]="24" nzErrorTip="Campo requerido">
+                        <input nz-input placeholder="Digite aqui..." formControlName="fone" mask="(00) 00000-0000"
+                            id="fone" />
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
+            <div nz-col nzSm="24">
+                <nz-form-label nzFor="nome" [nzNoColon]="true">Email</nz-form-label>
+                <nz-form-item>
+                    <nz-form-control [nzSpan]="24" nzErrorTip="E-mail inválido">
+                        <input nz-input placeholder="Digite aqui..." formControlName="email" id="email" />
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
+            <div nz-col nzSm="24">
+                <nz-form-label nzFor="nome" [nzNoColon]="true">Limite de crédito</nz-form-label>
+                <nz-form-item>
+                    <nz-form-control [nzSpan]="24" nzErrorTip="Campo requerido">
+                        <input nz-input placeholder="Digite aqui..." formControlName="limiteDeCredito"
+                            id="limiteDeCredito" />
+                    </nz-form-control>
+                </nz-form-item>
+            </div>
             <div nz-col nzSm="24">
                 <nz-form-label nzFor="nome" [nzNoColon]="true">Cod. Externo</nz-form-label>
                 <nz-form-item>
