cadastro de clientes

--- a/src/app/clientes/pages/cad-cliente/cad-cliente.component.html
+++ b/src/app/clientes/pages/cad-cliente/cad-cliente.component.html
@@ -102,7 +102,8 @@
                 <nz-form-label nzFor="nome" [nzNoColon]="true">Cep</nz-form-label>
                 <nz-form-item>
                     <nz-form-control [nzSpan]="24" nzErrorTip="Campo requerido">
-                        <input nz-input placeholder="Digite aqui..." formControlName="cep" mask="00.000-000" id="cep" />
+                        <input nz-input placeholder="Digite aqui..." formControlName="cep" 
+                        mask="00.000-000" id="cep" />
                     </nz-form-control>
                 </nz-form-item>
             </div>
@@ -148,7 +149,8 @@
                 <nz-form-label nzFor="nome" [nzNoColon]="true">Fone</nz-form-label>
                 <nz-form-item>
                     <nz-form-control [nzSpan]="24" nzErrorTip="Campo requerido">
-                        <input nz-input placeholder="Digite aqui..." formControlName="fone" mask="(00) 00000-0000"
+                        <input nz-input placeholder="Digite aqui..." formControlName="fone" 
+                            mask="(00) 00000-0000"
                             id="fone" />
                     </nz-form-control>
                 </nz-form-item>
